test_suite/tests/ui/with-variant/skip_ser_whole_variant.stderr
error: variant `Unit` cannot have both #[serde(serialize_with)] and #[serde(skip_serializing)]
 --> $DIR/skip_ser_whole_variant.rs:6:5
  |
6 | /     #[serde(serialize_with = "serialize_some_unit_variant")]
7 | |     #[serde(skip_serializing)]
8 | |     Unit,
  | |________^

error: aborting due to previous error

